# cpp-sorting-sims

./: README.md  meson.build
include/: common.h  heap.h  merge.h  quick.h
src/: common.cpp  heap.cpp  main.cpp  merge.cpp  quick.cpp
